--- a/style.css
+++ b/style.css
@@ -108,6 +108,8 @@ ul {
 
 a {
     color: #939393;
+    font-size: 20px;
+    font-weight: 700;
     text-decoration: none;
     -moz-transition: all .3s ease-out;
     -o-transition: all .3s ease-out;
